--- a/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
+++ b/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Gx5-tT-QZu">
-                                <rect key="frame" x="250" y="100" width="694.5" height="113"/>
+                                <rect key="frame" x="295" y="100" width="604" height="113"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Eah-09-SOo">
                                         <rect key="frame" x="0.0" y="0.0" width="113" height="113"/>
@@ -93,7 +93,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NeuroKinetic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBQ-4E-ggX">
-                                        <rect key="frame" x="143" y="0.0" width="551.5" height="113"/>
+                                        <rect key="frame" x="143" y="0.0" width="461" height="113"/>
                                         <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="80"/>
                                         <color key="textColor" red="0.23134317994117737" green="0.23138946294784546" blue="0.2313401997089386" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -782,10 +782,10 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="114" translatesAutoresizingMaskIntoConstraints="NO" id="jTN-dA-vfp">
-                                <rect key="frame" x="36" y="227" width="1122.5" height="396"/>
+                                <rect key="frame" x="23" y="227" width="1148.5" height="396"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="300" translatesAutoresizingMaskIntoConstraints="NO" id="oFl-xi-NNW">
-                                        <rect key="frame" x="0.0" y="0.0" width="1122.5" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1148.5" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Master Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ci6-SC-3Rq">
                                                 <rect key="frame" x="0.0" y="0.0" width="394.5" height="60"/>
@@ -793,14 +793,14 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dia-NZ-qDH">
-                                                <rect key="frame" x="694.5" y="0.0" width="34" height="60"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="60" placeholderIntrinsicHeight="60" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dia-NZ-qDH">
+                                                <rect key="frame" x="694.5" y="0.0" width="60" height="60"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="50"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="5SO-m1-tBp">
-                                                <rect key="frame" x="1028.5" y="0.0" width="94" height="32"/>
+                                                <rect key="frame" x="1054.5" y="0.0" width="94" height="32"/>
                                                 <connections>
                                                     <action selector="stepperValueChanged:" destination="R3y-i4-ueE" eventType="valueChanged" id="pCp-Kh-PGz"/>
                                                 </connections>
@@ -808,16 +808,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="331" translatesAutoresizingMaskIntoConstraints="NO" id="8QW-CJ-eba">
-                                        <rect key="frame" x="0.0" y="174" width="1122.5" height="54"/>
+                                        <rect key="frame" x="0.0" y="174" width="1148.5" height="54"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classical Music" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6m-Pn-Br9">
-                                                <rect key="frame" x="0.0" y="0.0" width="742.5" height="54"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="768.5" height="54"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="50"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P99-9T-Zkq">
-                                                <rect key="frame" x="1073.5" y="0.0" width="51" height="54"/>
+                                                <rect key="frame" x="1099.5" y="0.0" width="51" height="54"/>
                                                 <connections>
                                                     <action selector="setSoundEffect:" destination="R3y-i4-ueE" eventType="valueChanged" id="dfE-SD-nOA"/>
                                                 </connections>
@@ -828,10 +828,10 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="163" translatesAutoresizingMaskIntoConstraints="NO" id="uaU-DC-QF9">
-                                        <rect key="frame" x="0.0" y="342" width="1122.5" height="54"/>
+                                        <rect key="frame" x="0.0" y="342" width="1148.5" height="54"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auditory Assistance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q85-ca-8ve">
-                                                <rect key="frame" x="0.0" y="0.0" width="910.5" height="54"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="936.5" height="54"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="54" id="Yxm-r8-pGb"/>
                                                 </constraints>
@@ -840,7 +840,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K92-LF-K5m">
-                                                <rect key="frame" x="1073.5" y="0.0" width="51" height="54"/>
+                                                <rect key="frame" x="1099.5" y="0.0" width="51" height="54"/>
                                                 <connections>
                                                     <action selector="setAuditoryAssistance:" destination="R3y-i4-ueE" eventType="valueChanged" id="Ype-RB-l8g"/>
                                                 </connections>
@@ -848,6 +848,14 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="oFl-xi-NNW" firstAttribute="leading" secondItem="jTN-dA-vfp" secondAttribute="leading" constant="50" id="8kC-RD-DIn"/>
+                                    <constraint firstAttribute="trailing" secondItem="8QW-CJ-eba" secondAttribute="trailing" constant="50" id="ChS-r2-FTp"/>
+                                    <constraint firstAttribute="trailing" secondItem="oFl-xi-NNW" secondAttribute="trailing" constant="50" id="RSu-wS-lkx"/>
+                                    <constraint firstAttribute="trailing" secondItem="uaU-DC-QF9" secondAttribute="trailing" constant="50" id="dAZ-aV-JvR"/>
+                                    <constraint firstItem="8QW-CJ-eba" firstAttribute="leading" secondItem="jTN-dA-vfp" secondAttribute="leading" constant="50" id="fTL-TL-3Uj"/>
+                                    <constraint firstItem="uaU-DC-QF9" firstAttribute="leading" secondItem="jTN-dA-vfp" secondAttribute="leading" constant="50" id="i70-oh-h32"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.97260707619999998" green="0.96903175119999996" blue="0.94803971050000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1122,7 +1130,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Jug-ho-IZ7"/>
         <segue reference="AHe-k0-2YC"/>
-        <segue reference="FQc-GL-S7b"/>
+        <segue reference="5wv-Gz-ltI"/>
         <segue reference="FzK-bU-J74"/>
         <segue reference="Wfs-HK-JXq"/>
     </inferredMetricsTieBreakers>
